msr-algaworks/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "msr-algaworks-vs"
spec:
  hosts:
  - "msr-algaworks-api-service"
  http:
    - route:
      - destination:
          host: msr-algaworks-api-service
          subset: v1
        weight: 50
      - destination:
          host: msr-algaworks-api-service
          subset: v2
        weight: 50
